13. 대출 신청 신청 서류 매핑 기능 구현