@@ -2,6 +2,7 @@ package com.example.loan.service;
 
 import com.example.loan.exception.BaseException;
 import com.example.loan.exception.ResultType;
+import com.example.loan.repository.ApplicationRepository;
 import lombok.RequiredArgsConstructor;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.core.io.Resource;
@@ -11,6 +12,7 @@ import org.springframework.util.FileSystemUtils;
 import org.springframework.web.multipart.MultipartFile;
 
 import java.io.File;
+import java.net.MalformedURLException;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
@@ -22,23 +24,40 @@ import java.util.stream.Stream;
 public class FileStorageServiceImpl implements FileStorageService {
 
     @Value("${spring.servlet.multipart.location}")
-    private String uploadPath;
+    private String uploadPath; // 이 경로에 공통적으로 모든 파일이 다 올라갔는데 이제는 신청 정보 아이디를 그 하위 depth로 추가한다.
+
+    private final ApplicationRepository applicationRepository;
 
     @Override
-    public void save(MultipartFile file) {
+    public void save(Long applicationId, MultipartFile file) {
+        if (!isPresentApplication(applicationId)) {
+            throw new BaseException(ResultType.SYSTEM_ERROR);
+        }
+
         try {
-            Files.copy(file.getInputStream(), Paths.get(uploadPath).resolve(file.getOriginalFilename()),
-                    StandardCopyOption.REPLACE_EXISTING); // 중복된 이름의 파일이 있을 경우 덮어 쓴다.
+            // 신청 정보에 해당하는 디렉토리를 만들기 위한 작업
+            String applicationPath = uploadPath.concat("/" + applicationId);
+            Path directoryPath = Path.of(applicationPath);
+            if (!Files.exists(directoryPath)) {
+                Files.createDirectory(directoryPath);
+            }
+
+            Files.copy(file.getInputStream(), Paths.get(applicationPath).resolve(file.getOriginalFilename()));
         } catch (Exception e) {
             throw new BaseException(ResultType.SYSTEM_ERROR);
         }
     }
 
     @Override // 단건 다운로드 대출, 신청 서류 조회
-    public Resource load(String fileName) {
-        try {
-            Path file = Paths.get(uploadPath).resolve(fileName);
+    public Resource load(Long applicationId, String fileName) {
+        if (!isPresentApplication(applicationId)) {
+            throw new BaseException(ResultType.SYSTEM_ERROR);
+        }
 
+        try {
+            // 신청 정보에 해당하는 디렉토리에서 가져와야 하므로 수정
+            String applicationPath = uploadPath.concat("/" + applicationId);
+            Path file = Paths.get(applicationPath).resolve(fileName);
             Resource resource = new UrlResource(file.toUri());
 
             if (resource.isReadable() || resource.exists()) {
@@ -46,23 +65,36 @@ public class FileStorageServiceImpl implements FileStorageService {
             } else {
                 throw new BaseException(ResultType.NOT_EXIST);
             }
-        } catch (Exception e) {
-            throw new BaseException(ResultType.NOT_EXIST);
-        }
-    }
-
-    @Override
-    public Stream<Path> loadAll() {
-        try {
-            // uploadPath 경로에 있는 파일 리스트의 정보를 보여줌
-            return Files.walk(Paths.get(uploadPath), 1).filter(path -> !path.equals(Paths.get(uploadPath)));
-        } catch (Exception e) {
+        } catch (MalformedURLException e) {
             throw new BaseException(ResultType.SYSTEM_ERROR);
         }
     }
 
     @Override
-    public void deleteAll() {
-        FileSystemUtils.deleteRecursively(Paths.get(uploadPath).toFile());
+    public void deleteAll(Long applicationId) {
+        if (!isPresentApplication(applicationId)) {
+            throw new BaseException(ResultType.SYSTEM_ERROR);
+        }
+        String applicationPath = uploadPath.concat("/" + applicationId);
+        FileSystemUtils.deleteRecursively(Paths.get(applicationPath).toFile());
+    }
+
+    @Override
+    public Stream<Path> loadAll(Long applicationId) {
+        if (!isPresentApplication(applicationId)) {
+            throw new BaseException(ResultType.SYSTEM_ERROR);
+        }
+
+        try {
+            String applicationPath = uploadPath.concat("/" + applicationId);
+            // applicationPath 경로에 있는 파일 리스트의 정보를 보여줌
+            return Files.walk(Paths.get(applicationPath), 1).filter(path -> !path.equals(Paths.get(applicationPath)));
+        } catch (Exception e) {
+            throw new BaseException(ResultType.SYSTEM_ERROR);
+        }
+    }
+
+    private boolean isPresentApplication(Long applicationId) {
+        return applicationRepository.findById(applicationId).isPresent();
     }
 }
